# AMA

backend/: .gitignore  README.md  app.db  base_model.py  db.py  env.example  main.py  pyproject.toml  requirements.txt  sql_app.db
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: albums.py  articles.py  auth.py  records.py  songs.py
backend/app/auth/: dependencies.py  security.py
backend/app/core/: config.py
backend/app/crud/: album.py  article.py  record.py  song.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: album.py  article.py  record.py  song.py  user.py
backend/app/schemas/: album.py  article.py  record.py  song.py  user.py
frontend/: .prettierrc.json  eslint.config.ts  index.html  package-lock.json  package.json
frontend/src/: App.vue  index.css  main.ts
frontend/src/api/: client.ts  interceptors.ts
frontend/src/api/services/: albumService.ts  articleService.ts  songService.ts
frontend/src/api/types/: album.ts  article.ts  song.ts  user.ts
frontend/src/constants/: appRoutes.ts  editFields.ts
frontend/src/router/: index.ts
frontend/src/stores/: album.ts  article.ts  auth.ts  song.ts
frontend/src/views/: CompositionApiPage.vue  CreateArticleForm.vue  EditArticleForm.vue  LoginPage.vue  MyArticlesPage.vue  OptionsApiPage.vue  RegisterPage.vue  SettingsPage.vue
frontend/src/widgets/: AppFooter.vue  AppHeader.vue
