[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vue-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for the vue-fastapi project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0"
]

